force-app/main/default/objects/Shipment/fields/HRCSVC_Delivery_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Delivery_Number__c</fullName>
    <externalId>true</externalId>
    <label>Delivery Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>