force-app/main/default/objects/Shipment/fields/HRCSVC_Delivery_Number_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Delivery_Number_Created_Date__c</fullName>
    <label>Delivery Number Created Date</label>
    <type>Date</type>
</CustomField>