force-app/main/default/objects/Shipment/fields/HRCSVC_Handling_Unit__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Handling_Unit__c</fullName>
    <label>Handling Unit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>