force-app/main/default/objects/Shipment/fields/HRCSVC_Handling_Unit_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Handling_Unit_Created_Date__c</fullName>
    <label>Handling Unit Created Date</label>
    <type>Date</type>
</CustomField>