force-app/main/default/objects/Shipment/fields/HRCSVC_Promised_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Promised_Ship_Date__c</fullName>
    <label>Promised Ship Date</label>
    <type>Date</type>
</CustomField>