force-app/main/default/objects/Shipment/fields/HRCSVC_Return_Order__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Return_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SE-170</description>
    <label>Return Order</label>
    <referenceTo>ReturnOrder</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>